update expression OGNL & SPEL demo :)